Add listing shortcode can sometimes show form twice - FIXED
My Favorite page uses first listing author name instead of logged in user name - FIXED
Is active option removed from the address field to avoid confusion - CHANGED
Unable to populate dummy data with OpenStreetMap enabled - FIXED
Editor/Authors can access some parts of the backend even if setting set to not allow - FIXED

v1.6.4
Date custom field can sometimes display default date on preview page - FIXED
Average review added back to sidebar - CHANGED
& symbol causing problem in listing tag display - FIXED
Option added to export listings which are published between specific dates - CHANGED
Listings shortcode paging not working with lazy load images - FIXED
Google maps now required API KEY, setting added - FIXED

v1.6.3
Popular post categories widget not adhering to default post type setting - FIXED
OpenStreetMap breaks images on https sites when SSL is active - FIXED
Show page content for all GD pages - ADDED
jQuery chosen conflicts causes problem when add new region/city in backend add listing - FIXED
gd-Navi CSS min-width set to avoid hiding on small screens - FIXED
Lazy load GD images option added in Design>Scripts - ADDED
Wrong class spelling for search widget shortcode - FIXED
dummy data images are being cached now - ADDED
No reviews link points to #respond instead of #reviews - FIXED
Filter added to make telephone linkable in home map bubble - ADDED
Switching themes will persist GD widgets but now keep theme specific widget settings - FIXED
If new import has new featured image it does not set it properly as featured image - FIXED
Beaver Builder plugin has problems with draft posts when GD installed - FIXED
Second line menus items can show over first line sub menu items because of z-index - FIXED
Changed load_textdomain to init hook for WPML compatibility - CHANGED
Text `Listing Title` and `Listing Description` changed to CPT specific - CHANGED
Added filter to modify special offers tab content - ADDED